@@ -45,11 +45,6 @@
 #define DEFAULT_MIN_SPARE_THREAD 5
 #endif
 
-/* Where the main/parent process's pid is logged */
-#ifndef DEFAULT_PIDLOG
-#define DEFAULT_PIDLOG DEFAULT_REL_RUNTIMEDIR "/httpd.pid"
-#endif
-
 /*
  * Interval, in microseconds, between scoreboard maintenance.
  */
